Nouveau modèle léger

--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport"
         content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no, viewport-fit=cover">
-    <meta name="description" content="Expérience Multimédia">
-    <title>Expérience Multimédia Modèle</title>
+    <meta name="description" content="Exposition finale des étudiants en techniques d'intégration multimédia du Collège Montmorency">
+    <title>Titre du projet</title>
 
     <!-- Open Graph -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="">
-    <meta property="og:title" content="Expérience Multimédia Modèle">
-    <meta property="og:description" content="Expérience Multimédia">
-    <meta property="og:image" content="https://tim-montmorency.com/582601-experience-modele/favicon/opengraph.drawio.png">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="630">
+    <meta property="og:title" content="Titre du projet">
+    <meta property="og:description" content="Exposition finale des étudiants en techniques d'intégration multimédia du Collège Montmorency">
+    <meta property="og:image" content="https://tim-montmorency.com/public/img/tim-og.jpg">
+  <meta property="og:image:width" content="1920" />
+  <meta property="og:image:height" content="1008" />
 
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
@@ -24,13 +24,12 @@
     <link rel="manifest" href="favicon/site.webmanifest">
 
 
-
-
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify@^5.0.0-rc/dist/themes/core.min.css">
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify@^5.0.0-rc/dist/themes/core.min.css"> 
 
     <!-- Core Dark - Dark Mode Only (add-on), to disable remove or comment out the below line -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify@^5.0.0-rc/dist/themes/addons/core-dark.min.css"
-        media="(prefers-color-scheme: dark)" />
+    <!--  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify@^5.0.0-rc/dist/themes/addons/core-dark.min.css"
+        media="(prefers-color-scheme: dark)" />  -->
+
 
     <link rel="stylesheet" href="https://gllmar.github.io/docsify-lightbox-v5/docsify-lightbox.css">
     <!-- Prism theme (light). Swap with prism-okaidia.min.css or other for dark preference. -->
@@ -56,10 +55,10 @@
 
 
     window.$docsify = {
-            name: 'Expérience multimédia',
+            name: 'Titre du projet',
             // Replace with your repository URL, e.g. 'https://github.com/username/repo'
-            //repo: 'https://github.com/tim-montmorency/582601-experience-modele',
-  
+            // repo: 'https://github.com/tim-montmorency/582601-experience-modele',
+            logo: '/favicon/favicon-32x32.png',
             // Sidebar Configuration
             auto2top: true,
             loadSidebar: true,
@@ -138,7 +137,7 @@
 
     <!-- <script src="//unpkg.com/docsify-pagination/dist/docsify-pagination.min.js"></script> -->
     <script src="https://gllmar.github.io/docsify-videoplayer/docsify-videoplayer.js"></script>
-    <script src="https://gllmar.github.io/docsify-repo-toolbar/docsify-repo-toolbar.js"></script>
+    <!-- <script src="https://gllmar.github.io/docsify-repo-toolbar/docsify-repo-toolbar.js"></script> -->
     <script src="https://gllmar.github.io/docsify-unhashtaglink/docsify-unhashtaglink.js"></script>
     <script src="//cdn.jsdelivr.net/npm/docsify-copy-code/dist/docsify-copy-code.min.js"></script>
     <script src="//unpkg.com/docsify-mermaid@2.0.1/dist/docsify-mermaid.js"></script>
@@ -146,25 +145,19 @@
         <!-- Extra Prism languages AFTER Docsify (don't re-load core to avoid overrides) -->
         <script src="https://cdn.jsdelivr.net/npm/prismjs@1/components/prism-c.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/prismjs@1/components/prism-cpp.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/prismjs@1/components/prism-python.min.js"></script>
+
         <script src="https://cdn.jsdelivr.net/npm/prismjs@1/components/prism-gdscript.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1/components/prism-csharp.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/prismjs@1/components/prism-diff.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/prismjs@1/components/prism-markdown.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/prismjs@1/components/prism-bash.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/prismjs@1/components/prism-powershell.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/prismjs@1/components/prism-batch.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/prismjs@1/components/prism-typescript.min.js"></script>
+       
         <script src="https://cdn.jsdelivr.net/npm/prismjs@1/components/prism-json.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/prismjs@1/components/prism-yaml.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/prismjs@1/components/prism-docker.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/prismjs@1/components/prism-sql.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/prismjs@1/components/prism-go.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/prismjs@1/components/prism-rust.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/prismjs@1/components/prism-toml.min.js"></script>
+      
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1/components/prism-glsl.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/prismjs@1/components/prism-hlsl.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/prismjs@1/components/prism-wgsl.min.js"></script>
+
         <!-- Line numbers plugin last -->
         <script src="https://cdn.jsdelivr.net/npm/prismjs@1/plugins/line-numbers/prism-line-numbers.min.js"></script>
 
