Add theme customization and update stylesheet links in HTML

--- a/index.html
+++ b/index.html
@@ -23,12 +23,11 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
     <link rel="manifest" href="favicon/site.webmanifest">
 
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify@^5.0.0-rc/dist/themes/core.min.css"> 
 
-   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify@^5.0.0-rc/dist/themes/core.min.css"> 
-
-    <!-- Core Dark - Dark Mode Only (add-on), to disable remove or comment out the below line -->
-    <!--  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify@^5.0.0-rc/dist/themes/addons/core-dark.min.css"
-        media="(prefers-color-scheme: dark)" />  -->
+ 
+    <!-- Put theme customization in customize.css, comment to remove -->
+   <link rel="stylesheet" href="customize.css" /> 
 
 
     <link rel="stylesheet" href="https://gllmar.github.io/docsify-lightbox-v5/docsify-lightbox.css">
