Added audio support

--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@
                     if (window.Prism && window.Prism.highlightAll) {
                         window.Prism.highlightAll();
                     }
+                    import('/docsify-wavesurfer-plugin.js').then(module => {
+                         module.initWaveSurfer();
+                    }).catch(err => console.error('Failed to load WaveSurfer plugin', err));
                 });
             }],
         };
