Changer titre site

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
       name="description"
       content="Exposition finale des étudiants en techniques d'intégration multimédia du Collège Montmorency"
     />
-    <title>Titre du projet</title>
+    <title>Voix en soi</title>
 
     <!-- Open Graph -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="" />
-    <meta property="og:title" content="Titre du projet" />
+    <meta property="og:title" content="Voix en soi" />
     <meta
       property="og:description"
       content="Exposition finale des étudiants en techniques d'intégration multimédia du Collège Montmorency"
@@ -79,7 +79,7 @@
 
     <script>
       window.$docsify = {
-        name: "Titre du projet",
+        name: "Voix en soi",
         // Replace with your repository URL, e.g. 'https://github.com/username/repo'
         // repo: 'https://github.com/tim-montmorency/582601-experience-modele',
         logo: "/favicon/favicon-32x32.png",
