--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
     <style>
       :root {
         --theme-color: #ff5555; /*red */
+        --content-max-width: 50vw;
       }
     </style>
   </head>
