--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="favicon/apple-touch-icon.png"
+      href="favoticon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="favicon/favicon-32x32.png"
+      href="favoticon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="favicon/favicon-16x16.png"
+      href="favoticon.png"
     />
     <link rel="manifest" href="favicon/site.webmanifest" />
 
@@ -83,7 +83,7 @@
         name: "Voix en soi",
         // Replace with your repository URL, e.g. 'https://github.com/username/repo'
         // repo: 'https://github.com/tim-montmorency/582601-experience-modele',
-        logo: "/favicon/favicon-32x32.png",
+        logo: "favoticon.png",
         // Sidebar Configuration
         auto2top: true,
         loadSidebar: true,
